fix scroll bug on mobile view

--- a/src/components/sitenav.module.scss
+++ b/src/components/sitenav.module.scss
@@ -3,6 +3,14 @@
 .container {
   .sidenav {
     list-style-type: none;
+    height: 100%;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    overflow-y: scroll;
+  }
+
+  .sidenav::-webkit-scrollbar {
+    display: none;
   }
 
   .sidenav li {
